--- a/site/ERA-site/css/styles.css
+++ b/site/ERA-site/css/styles.css
@@ -5,8 +5,6 @@ body{
 h1, h2, h3, h4, h5, h6{
   font-family: "Montserrat-Bold", sans-serif;
 
-
-
 }
 .container-fluid{
   padding: 7% 15% ;
@@ -60,12 +58,15 @@ margin: 3% 5% 3% 0;
 }
 /* Title section */
 .logo{
-  width: 10%;
+  width: 40%;
   margin: 20px 1px 50px;
-
+  
+}
+.menuSuperior.logo{
+  margin-top: 50%;
 }
 #title{
-  background-color: #1F2B99;
+  background-color: #93E69A;
   text-align: left;
 }
 #title .container-fluid{
@@ -160,3 +161,18 @@ margin: 3% 5% 3% 0;
 }
 .fab.far.fas{
   margin: 10px;
+}
+
+.menuSuperior{
+  background: #000;
+  opacity: 0.5;
+}
+.container-fluid-2{
+  padding: 2% 10% ;
+  width: 100%;
+  height: 10%;
+}
+
+#navbarSupportedContent{
+  margin-left: 45%;
+}
